--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@netlify/functions": "^1.0.0",
     "@sindresorhus/slugify": "^2.1.0",
     "autoprefixer": "^10.4.2",
+    "body-parser": "^1.20.2",
     "cloudinary": "^1.27.1",
     "csso": "^5.0.2",
     "eleventy-plugin-toc": "^1.1.5",
+    "express": "^4.19.2",
     "fast-xml-parser": "^4.0.11",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.4.1",
     "matter-js": "^0.19.0",
     "node-fetch": "^3.1.0",
+    "nodemailer": "^6.9.14",
     "postcss": "^8.4.5",
     "rehype-local-image-to-cloudinary": "^1.0.4",
     "terser": "^5.10.0"
