--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^1.27.1",
     "csso": "^5.0.2",
+    "dotenv": "^16.4.5",
     "eleventy-plugin-toc": "^1.1.5",
     "express": "^4.19.2",
     "fast-xml-parser": "^4.0.11",
